# FastAPI-Learning

./: .gitignore  README.md  pyproject.toml
projects/people-database/: README.md
projects/people-database/docs/data/: schema.sql
projects/people-database/docs/diagrams/: DER.drawio  MER.drawio
projects/people-database/src/: __init__.py
projects/people-database/src/api/: __init__.py  server.py
projects/people-database/src/database/: DCL.py  DDL.py  DML.py  DQL.py  __init__.py  create_database.py  load_dataset.py
projects/people-database/tests/: get.py
test/: animais.py  server.py
